--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "vente-automobile-pi-clean",
+  "name": "vente-automobile-pi",
   "version": "1.0.0",
-  "private": true,
+  "main": "index.js",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "next": "13.4.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next": "^12.0.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
   }
 }
